--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ html, body {
 	background-size: cover;
 	height: 100%;
 	max-height: 100%;
-	position: absolute;
+	position: fixed;
 	text-align: center;
 	width: 100%;
 	-moz-background-size: cover;
@@ -45,7 +45,7 @@ u {
 	text-decoration: none;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 1281px) {
 	.middle {
 		width: 40%;
 		margin: 0 auto;
@@ -123,15 +123,12 @@ u {
 	background: initial;
 	background-color: rgb(47,79,79, 0.95);
 	border-radius: 20px;
-	height: 70%;
 	line-height: 2;
 	margin-left: auto;
 	margin-right: auto;
-	max-height: 70%;
 	opacity: 0;
 	overflow: auto;
-	/*overflow-y: scroll;*/
-    max-height: 55vh;
+    max-height: 55vh !important;
 	scroll-behavior: smooth;
 	text-align: center;
 	transition: all 1s ease-in-out;
@@ -140,23 +137,19 @@ u {
 	-ms-transition: all 1s ease-in-out;
 	-o-transition: all 1s ease-in-out;
 	-webkit-transition: all 1s ease-in-out;
-	/*-webkit-overflow-scrolling: touch;*/
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 1281px) {
 	.outputs {
 		background: initial;
 		background-color: rgb(47,79,79, 0.95);
 		border-radius: 20px;
-		height: 70%;
 		line-height: 2;
 		margin-left: auto;
 		margin-right: auto;
-		max-height: 70%;
 		opacity: 0;
 		overflow: auto;
-		/*overflow-y: scroll;*/
-    	max-height: 70vh;
+    	max-height: 60vh !important;
 		scroll-behavior: smooth;
 		text-align: center;
 		transition: all 1s ease-in-out;
@@ -165,7 +158,6 @@ u {
 		-ms-transition: all 1s ease-in-out;
 		-o-transition: all 1s ease-in-out;
 		-webkit-transition: all 1s ease-in-out;
-		/*-webkit-overflow-scrolling: touch;*/
 	}
 }
 
@@ -176,7 +168,6 @@ u {
 .gradientback {
 	bottom: 35px;
 	height: 60px;
-	/*left: 0px;*/
 	position: absolute;
 	width: 100%;
 	background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 100%);
@@ -191,9 +182,8 @@ u {
 	background-color: black;
 	bottom: 0;
 	color: white;
-	/*height: 6%;*/
 	left: 0;
-	position: absolute;
+	position: fixed;
 	text-align: center;
 	width: 100%;
 }
