fix outputs background

--- a/styles.css
+++ b/styles.css
@@ -153,7 +153,7 @@ u {
 		scroll-behavior: smooth;
 		text-align: center;
 		transition: all 1s ease-in-out;
-		width: 90%;
+		/*width: 90%;*/
 		-moz-transition: all 1s ease-in-out;
 		-ms-transition: all 1s ease-in-out;
 		-o-transition: all 1s ease-in-out;
