fix footer font size

--- a/css/styles.css
+++ b/css/styles.css
@@ -107,14 +107,14 @@ u {
 
 .copyright {
 	color: white;
-	font-size: 0.7em;
+	font-size: 11.3px;
 	margin-top: -3%;
 	padding-top: 5%;
 }
 
 .copyrightLine2 {
 	color: white;
-	font-size: 0.7em;
+	font-size: 11.3px;
 	margin-top: 0;
 	padding-top: 0;
 }
