--- a/css/styles.css
+++ b/css/styles.css
@@ -182,7 +182,7 @@ u {
 	border-radius: 25px;
 	width: 25px;
 	height: 25px;
-	background-color: steelblue;
+	background-color: #4682b4;
 	padding: 5px;
 	font-size: 20px;
 }
