--- a/css/styles.css
+++ b/css/styles.css
@@ -4,16 +4,16 @@
 }
 
 html, body {
-	background-color: black;
+	background-color: #000;
 	font-family: sans-serif;
 	height: 100%;
 	max-height: 100%;
-	-webkit-text-stroke: 0.5px black;
+	-webkit-text-stroke: 0.5px #000;
 }
 
 .background-container {
 	background-attachment: fixed;
-	background-color: black;
+	background-color: #000;
 	background-image: url('../assets/cod_background.jpeg');
 	background-position: center center;
 	background-repeat: no-repeat;
@@ -29,13 +29,13 @@ html, body {
 }
 
 h2 {
-	color: white;
+	color: #fff;
 	text-decoration: none;
 	margin-left: 20px;
 }
 
 h4 {	
-	color: dodgerblue;
+	color: #1e90ff;
 }
 
 p, span {
@@ -59,7 +59,7 @@ u {
 }
 
 .top {
-	color: white;
+	color: #fff;
 	display: inline-block;
 	font-size: 1.7em;
 	font-weight: 600;
@@ -68,7 +68,7 @@ u {
 }
 
 .header {
-	color: white;
+	color: #fff;
 	font-size: 1em;
 	font-weight: 600;
 	margin-left: auto;
@@ -84,7 +84,7 @@ u {
 	border: 0;
 	border-radius: 3px;
 	box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
-	color: #000000;
+	color: #000;
 	cursor: pointer;
 	display: block;
 	font-size: .75em;
